<resources>
    <string name="app_name">team05</string>
    <string name="username">Username:</string>
    <string name="sing_in">Sing in</string>
    <string name="password">Password:</string>
    <string name="welcome">Welcome</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="create_worker">Create Worker</string>
    <string name="last_name">Last Name</string>
    <string name="create">Create</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="afm">AFM</string>
    <string name="department">Department</string>
    <string name="agreement">Agreement</string>
    <string name="first_name">First Name</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="create_department">Create Department</string>
    <string name="department_name">Department Name</string>
    <string name="name">Name:</string>
    <string name="create_button">CREATE</string>
    <string name="cancel_button">CANCEL</string>
    <string name="add_agreement">ADD AGREEMENT</string>
    <string name="ok">OK</string>
	<string name="hire_date">Hire Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="starting_date">Starting Date</string>
    <string name="agreement_type">Agreement Type</string>
    <string name="_01_01_2022">01/01/2022</string>
    <string name="add_agr">ADD</string>
    <string name="create_agreement">Create Agreement</string>
    <string name="create_agreement_type">Create Agreement Type</string>
    <string name="add_agreement_type">ADD AGREEMENT TYPE</string>
    <string name="salary">Salary</string>
    <string name="agrTypename">Name:</string>
    <string name="_10">10</string>
    <string name="agreement_name">Agreement\nName</string>
    <string name="sick_days">Sick Days</string>
    <string name="rest_days">Rest Days</string>
    <string name="part_time">Part Time</string>
    <string name="full_time">Full Time</string>
    <string name="paid_by_salary">Paid By Salary</string>
    <string name="paid_by_wage">Paid By Wage</string>
    <string name="_100_00">100.00</string>
    <string name="manager">Manager</string>
    <string name="employee">Employee</string>
    <string name="edit_worker">Edit Worker</string>
    <string name="save">SAVE</string>
    <string name="add_attendance">ADD ATTENDANCE</string>
    <string name="delete_newline_worker">DELETE\nWORKER</string>
    <string name="please_type_the_afm_of_the_worker_that_you_want_to_add_edit_or_delete">Please type the afm of the worker that you want to add/edit/delete</string>
    <string name="delete_worker">DELETE WORKER</string>
    <string name="leave_requests">Leave Requests</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="leave_request_type">Leave Request Type:</string>
    <string name="leave_request">Leave Request</string>
    <string name="leave_id">Leave ID:</string>
    <string name="leave_type">Leave Type:</string>
    <string name="worker">Worker</string>
    <string name="rest_days_already_taken">Rest days already taken:</string>
    <string name="approve">APPROVE</string>
    <string name="refuse">REFUSE</string>
    <string name="sick_days_already_taken">Sick days already taken</string>
    <string name="hr">HR</string>
    <string name="create_edit_delete_worker">CREATE/EDIT/DELETE WORKER</string>
    <string name="moth">Moth</string>
    <string name="year">Year</string>
    <string name="_2022">2022</string>
    <string name="calculate_payments">CALCULATE PAYMENTS</string>
    <string name="back">BACK</string>
    <string name="continue_as_hr">continue as HR</string>
    <string name="press_continue_if_you_want_to_see_the_leave_requests">Press continue if you want to see the leave requests</string>
    <string name="cancelswbafm">Cancel</string>
    <string name="single_day_request">single day request</string>
    <string name="multiple_days_request">multiple days request</string>
    <string name="rest_day_s">rest_day(s)</string>
    <string name="first_day">first day</string>
    <string name="last_day">last day</string>
    <string name="sick_day_s">sick_day(s)</string>
    <string name="please_have_in_mind_that_you_can_request_only_days_within_the_same_month_in_every_request_and_only_working_days_in_a_row">Please have in mind that you can request only days within the same month in every request and only working days in a row</string>
    <string name="cancellr">cancel</string>
    <string name="type_of_leave_request">Type of leave request</string>
    <string name="continuelr">continue</string>
    <string name="press_continue_if_you_want_to_request_a_leave">Press continue if you want to request a leave</string>
    <string name="continueefp">continue</string>
    <string name="continueSWAFM">CONTINUE</string>
    <string name="payments">Payments</string>
</resources>