<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textCreateDep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_department"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="33dp" />

    <TextView
        android:id="@+id/textDepName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/department_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/textCreateDep"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/textCreateDep"
        app:layout_constraintTop_toBottomOf="@+id/textCreateDep" />

    <EditText
        android:id="@+id/editTextDepName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/name"
        android:textColor="#00897B"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/textDepName"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/textDepName"
        app:layout_constraintTop_toBottomOf="@+id/textDepName"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonCreateDep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/create_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
        app:layout_constraintStart_toStartOf="@+id/editTextDepName"
        app:layout_constraintTop_toBottomOf="@+id/editTextDepName"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextDepName"
        app:layout_constraintTop_toBottomOf="@+id/editTextDepName" />

</androidx.constraintlayout.widget.ConstraintLayout>