<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textCreateAgrType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_agreement"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textAgrHireDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hire_date"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/editDateAgreeHireDate"
        app:layout_constraintStart_toStartOf="@+id/textCreateAgrType"
        app:layout_constraintTop_toTopOf="@+id/editDateAgreeHireDate" />

    <TextView
        android:id="@+id/textAgrEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ending_date"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/editDateAgreeEndDate"
        app:layout_constraintStart_toStartOf="@+id/textViewAgrTypeSalary"
        app:layout_constraintTop_toTopOf="@+id/editDateAgreeEndDate" />

    <Button
        android:id="@+id/buttonCreateAgr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/create_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonaddAgrType"
        app:layout_constraintStart_toStartOf="@+id/buttonaddAgrType"
        app:layout_constraintTop_toBottomOf="@+id/buttonaddAgrType" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/cancel_button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonaddAgrType"
        app:layout_constraintStart_toEndOf="@+id/buttonaddAgrType"
        app:layout_constraintTop_toBottomOf="@+id/buttonaddAgrType" />

    <TextView
        android:id="@+id/textViewAgrTypeSalary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starting_date"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/editDateAgreeStartDate"
        app:layout_constraintStart_toStartOf="@+id/textAgrHireDate"
        app:layout_constraintTop_toTopOf="@+id/editDateAgreeStartDate" />

    <EditText
        android:id="@+id/editDateAgreeEndDate"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_01_01_2022"
        android:inputType="date"
        android:textColor="@color/design_default_color_secondary"
        android:textColorHint="@color/design_default_color_secondary_variant"
        app:layout_constraintEnd_toEndOf="@+id/editDateAgreeStartDate"
        app:layout_constraintStart_toStartOf="@+id/editDateAgreeStartDate"
        app:layout_constraintTop_toBottomOf="@+id/editDateAgreeStartDate"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editDateAgreeHireDate"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_01_01_2022"
        android:inputType="date"
        android:textColor="@color/design_default_color_secondary"
        android:textColorHint="@color/design_default_color_secondary_variant"
        app:layout_constraintEnd_toEndOf="@+id/textCreateAgrType"
        app:layout_constraintStart_toEndOf="@+id/textAgrHireDate"
        app:layout_constraintTop_toBottomOf="@+id/textCreateAgrType"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editDateAgreeStartDate"
        android:layout_width="147dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_01_01_2022"
        android:inputType="date"
        android:textColor="@color/design_default_color_secondary"
        android:textColorHint="@color/design_default_color_secondary_variant"
        app:layout_constraintEnd_toEndOf="@+id/editDateAgreeHireDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editDateAgreeHireDate"
        app:layout_constraintTop_toBottomOf="@+id/editDateAgreeHireDate"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonaddAgrType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:text="@string/add_agreement_type"
        app:layout_constraintEnd_toEndOf="@+id/textCreateAgrType"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textCreateAgrType"
        app:layout_constraintTop_toBottomOf="@+id/textCreateAgrType" />

</androidx.constraintlayout.widget.ConstraintLayout>