<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/swbafm_afm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/swbafmContButton"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toStartOf="@+id/buttongobackfromswbafm"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/swbafm_afminputmess"
        android:layout_width="301dp"
        android:layout_height="55dp"
        android:text="@string/please_type_the_afm_of_the_worker_that_you_want_to_add_edit_or_delete"
        app:layout_constraintBottom_toTopOf="@+id/swbafm_afm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

    <Button
        android:id="@+id/swbafmContButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="124dp"
        android:layout_marginEnd="8dp"
        android:text="@string/continueSWAFM"
        app:layout_constraintEnd_toEndOf="@+id/swbafm_afminputmess"
        app:layout_constraintTop_toBottomOf="@+id/swbafm_afm" />

    <Button
        android:id="@+id/buttongobackfromswbafm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="124dp"
        android:layout_marginEnd="52dp"
        android:text="@string/cancelswbafm"
        app:layout_constraintEnd_toStartOf="@+id/swbafmContButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/swbafm_afminputmess"
        app:layout_constraintTop_toBottomOf="@+id/swbafm_afm" />
</androidx.constraintlayout.widget.ConstraintLayout>